fix double scroll

--- a/forTrainings/web/src/main/webapp/res/calendar/css/modal.css
+++ b/forTrainings/web/src/main/webapp/res/calendar/css/modal.css
@@ -1,10 +1,11 @@
 .modalMain{
     padding-top: 100px;
 }
+
 .modalBackground{
     opacity: 1 !important;
 }
 
 .modal-open {
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
